@@ -508,7 +508,7 @@ b97d3599905a80ea605bdd163c9116362028e3a1 data/createbigcannons/block_recipes/bro
 0edd1ff58948764619f05c556aa87ca33c5ad16d data/createbigcannons/block_recipes/cast_iron_autocannon_barrel.json
 e873e1bfd714c9bb2abaf4ac32d7cdcf954f53c3 data/createbigcannons/block_recipes/cast_iron_cannon_barrel.json
 11364995693f1baa723cd10d336d376c58e9bd64 data/createbigcannons/block_recipes/cast_iron_cannon_chamber.json
-fa3dcbb84668a6ec138e6e98b4e1fb8d65c7889b data/createbigcannons/block_recipes/cast_iron_cannon_end.json
+e01e95f41ee869354a1b0b4b6d79ec08a46afe72 data/createbigcannons/block_recipes/cast_iron_cannon_end.json
 4741e44d8c6f3ad25a35cc73eb7ea877dd037f81 data/createbigcannons/block_recipes/incomplete_bronze_autocannon_breech.json
 3f6484f92a821dd976e00774a8aa627b71173983 data/createbigcannons/block_recipes/incomplete_bronze_autocannon_recoil_spring.json
 30a37f7b06ebd34358dfba0e8eebafc894af13ff data/createbigcannons/block_recipes/incomplete_bronze_sliding_breech.json
@@ -542,9 +542,9 @@ b9c8b2c5297ac4f1e80a084275101dd255f17c32 data/createbigcannons/block_recipes/unb
 81a13db3681c2e86a93ae3072472f0741a858dcb data/createbigcannons/block_recipes/unbored_cast_iron_autocannon_barrel.json
 a56156badf1bc262055278ab9657e950ad26e632 data/createbigcannons/block_recipes/unbored_cast_iron_autocannon_breech.json
 2e6ab87dfbb88a466f8dc3eb9f1ff02ac1fc12fc data/createbigcannons/block_recipes/unbored_cast_iron_autocannon_recoil_spring.json
-d25a9f2fce61a2782a71bbdd84f55b017a6eb3fc data/createbigcannons/block_recipes/unbored_cast_iron_cannon_barrel.json
-e55d51ae7c258f74595ef1d418854b6d7c9895e6 data/createbigcannons/block_recipes/unbored_cast_iron_cannon_chamber.json
-ac38f4135b41c1a84457d474f4a201726de6b241 data/createbigcannons/block_recipes/unbored_cast_iron_sliding_breech.json
+b8c2074904d64b5e2b52772a56731702991c59a3 data/createbigcannons/block_recipes/unbored_cast_iron_cannon_barrel.json
+d1d4f876c83e6be60a36b970f3dc405ae4bd09d0 data/createbigcannons/block_recipes/unbored_cast_iron_cannon_chamber.json
+ce5bc880487bb7cab1f6c486f55f5900980df997 data/createbigcannons/block_recipes/unbored_cast_iron_sliding_breech.json
 1a6884058c1914aa7a7d37d7f8dde95d3d7e39d3 data/createbigcannons/block_recipes/unbored_large_nethersteel_cannon_layer.json
 83e7a0036bdcd848e79fad74d3c45058f187f53b data/createbigcannons/block_recipes/unbored_large_steel_cannon_layer.json
 3d94622eee2e46b9106dd0d39c25f3783c0146d5 data/createbigcannons/block_recipes/unbored_medium_nethersteel_cannon_layer.json
